Misc clean-ups (#1611)
* Use valueOf factory methods instead of constructors (which were deprecated in Java 9) to create primitive wrapper objects.

* Make inner classes static when possible.

* Fields in Enums should be final.

* Add missing override annotations.